# finance-aggregator

./: .env.example  .gitignore  GEMINI.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: Dockerfile  Dockerfile.dev  dependencies.py  main.py
api/routers/: accounts.py  offsets.py  transactions.py  truelayer.py
app/: config.py
app/adapters/: base.py  registry.py
app/adapters/normalizers/: __init__.py  amex.py  chase.py  monzo.py  natwest.py
app/db/: session.py
app/models/: __init__.py  account.py  token.py  transaction.py
app/schemas/: account.py  offset.py  transaction.py
app/services/: account_service.py  crypto.py  offset_service.py  transaction_service.py  truelayer_service.py
deploy/: api.cloudrun.yaml  cloudbuild.yaml  sync-worker.cloudjob.yaml
docs/adr/: 001-truelayer-card-endpoints.md
scripts/: test_amex_sandbox.py
sync_worker/: Dockerfile  main.py
tests/: conftest.py
tests/unit/test_adapters/: test_amex.py  test_monzo.py
