[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-aggregator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "cryptography>=44",
    "pyjwt>=2.8",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-run>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "api", "sync_worker"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
